# TimeSeriesDB

ZMQClient/: Cargo.toml  config.toml
ZMQClient/perf_test_conf/: client_1.toml  client_1_half1.toml  client_1_half2.toml  client_1_sid.toml  client_2.toml  client_2_half1.toml  client_2_half2.toml  client_2_sid.toml  client_4.toml  client_4_half1.toml  client_4_half2.toml
ZMQClient/src/: client.rs  client_old.rs  lib.rs  lib_tokio.rs  lib_tokio_async.rs  main.rs
ZMQSimple/: Cargo.toml
ZMQSimple/src/: main.rs
database/: Cargo.toml  bench_config.toml
database/benches/: db_benchmark.rs
database/perf_test_conf/: local_gen.toml  remote_1.toml  remote_16.toml  remote_1_d2.toml  remote_2.toml  remote_2_d2.toml  remote_4.toml  remote_4_d2.toml  remote_8.toml
database/script/: float_compress.sh  knn-UCR-paa.sh  projection_exp.sh
database/script/python/: hist.py  proj_logparser.py
database/src/: MABcompression_daemon.rs  MABrecoding_daemon.rs  btree.rs  buffer_pool.rs  client.rs  compression_daemon.rs  dictionary.rs  dispatcher.rs  future_signal.rs  kernel.rs  lib.rs  main.rs  mapping_server.rs  recoding_daemon.rs  remote_stream.rs  segment.rs  stream_wrap.rs  tcp_endpoint.rs  tcp_endpoint_tcp.rs  zeromq_client.rs
database/src/compress/: btr_array.rs  buff_lossy.rs  buff_simd.rs  buff_slice.rs  gorilla.rs  main.rs  mod.rs  pla_lttb.rs  rrd_sample.rs  scaled_slice.rs  split_double.rs  sprintz.rs
database/src/ingestion/: Cargo.toml
database/src/ingestion/script/: MLeval-2k.sh  MLeval-online.sh  MLeval.sh  dist-shift-online.sh
database/src/ingestion/src/: lib.rs  main.rs
database/src/knn/: main.rs  mod.rs
database/src/lossyML/: Cargo.toml
database/src/lossyML/script/: kmeans-UCI.sh  kmeans-UCR.sh  kmeans-cbf.sh  kmeans_logparser.py  model-acc.sh  model-uci-acc.sh
database/src/lossyML/src/: file_io.rs  main.rs
database/src/methods/: bit_packing.rs  compress.rs  main.rs  mod.rs
database/src/outlier/: mod.rs
database/src/query/: main.rs
database/src/r_kmeans/: Cargo.toml
database/src/r_kmeans/script/: kmeans-UCR.sh  kmeans-cbf.sh  kmeans_logparser.py
database/src/r_kmeans/src/: file_io.rs  main.rs  mod.rs
database/test_configs/: config.toml
smartcore/: Cargo.toml
smartcore/src/: api.rs
smartcore/src/cluster/: dbscan.rs  kmeans.rs
smartcore/src/ensemble/: random_forest_classifier.rs
smartcore/src/linalg/: evd.rs  svd.rs
smartcore/src/math/distance/: mod.rs
smartcore/src/naive_bayes/: gaussian.rs
smartcore/src/neighbors/: knn_classifier.rs
smartcore/src/tree/: decision_tree_classifier.rs
