[package]
name = "ZMQClient"
version = "0.1.0"
authors = ["jih <jih@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
serde = "1.0.90"
serde_derive = "1.0.90"
bincode = "1.1.3"
toml = "0.5.1"
toml-loader = "0.1.1"
tokio = "0.1.19"
futures = "0.1.26"
rand = "0.6.5"
ndarray = "0.12.1"