[package]
name = "ZMQClient"
version = "0.1.0"
authors = ["jih <jih@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
serde = "1.0.114"
serde_derive = "1.0.114"
bincode = "1.3.1"
toml = "0.5.1"
tokio = { version = "0.2.21", features = ["rt-threaded", "tcp", "time", "stream", "sync", "net", "io-util"] }
futures = "0.3.5"
rand = "0.6.5"
ndarray = "0.12.1"
fnv = "1.0.3"