[package]
name = "ZMQClient"
version = "0.1.0"
authors = ["jih <jih@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
serde = "1.0.114"
serde_derive = "1.0.114"
bincode = "1.3.1"
toml = "0.5.1"
tokio = { version = "0.3.3", features = ["time", "stream", "rt", "rt-multi-thread", "macros", "net", "io-util"] }
tokio-util = { version = "0.5.0", features = ["codec"] }
futures = "0.3.7"
rand = "0.6.5"
ndarray = "0.12.1"
fnv = "1.0.3"
bytes = "0.6.0"