[package]
name = "ZMQSimple"
version = "0.1.0"
authors = ["cc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
serde = "1.0.114"
serde_derive = "1.0.114"
bincode = "1.3.1"
fnv = "1.0.3"
futures = { version = "0.3.5", features = ["executor", "thread-pool"] }
tokio = { version = "0.2.22", features = ["rt-threaded", "tcp", "dns", "io-util"]}

