[package]
name = "ingestion"
version = "0.1.0"
authors = ["chunwei <tranway@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time_series_start = { path = "../../../database" }
ndarray = "0.12.1"
csv = "1.1.6"
toml-loader = "0.1.1"
rocksdb = "0.12.4"
tokio = "0.1.19"
futures = "0.1.26"
lazy_static = "1.4.0"
queues = "1.1.0"
itertools = "0.9.0"
serde = "1.0.126"
bincode = "1.1.3"
serde_derive = "1.0.126"
rustfft = "3.0.1"
ndarray-linalg = { version = "0.11", features = ["intel-mkl"] }
num = "0.2"
rand = "0.6.5"